Add event service

--- a/src/app/rewards/rewards.component.html
+++ b/src/app/rewards/rewards.component.html
@@ -69,7 +69,7 @@
                     <td class="col-1 align-self-center">
                         {{reward.recordStatus ? 'Active' : 'Completed'}}
                     </td>
-                    <td *ngIf="reward.recordStatus" class="col-1 text-center align-self-center">
+                    <td class="col-1 text-center align-self-center">
                         <button class="btn btn-info btn-sm" (click)="toggleForm(reward);">Edit</button>
                     </td>
                 </tr>
