--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="logo">
     <a disabled class="simple-text">
         <div class="logo-img">
-            <img src="/assets/img/INTI-Logo.jpg"/>
+            <img src="assets/img/INTI-Logo.jpg"/>
         </div>
         INTI Alumni
     </a>
