--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,13 @@
 <div class="main-content">
   <div class="container-fluid">
       <div class="row">
+          <div class="col-12">
+              <div class="card">
+                  <div class="card-footer align-self-center text-danger font-weight-bold">Analytics dashboard is currently under development. Shown here is a mockup of the completed product.</div>
+              </div>
+          </div>
+      </div>
+      <div class="row">
           <div class="col-lg-3 col-md-6 col-sm-6">
               <div class="card card-stats">
                   <div class="card-header card-header-warning card-header-icon">
