--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -149,7 +149,7 @@
                         Image
                     </div>
                     <div class="col-4 d-flex justify-content-center">
-                        <img class="img mw-100 h-100" src="{{formEvent.image}}" appDefault="/assets/img/img-default.png">
+                        <img class="img mw-100 h-100" src="{{formEvent.image}}" appDefault="assets/img/img-default.png">
                     </div>
                     <div class="col-2 align-self-center">
                         <button class="btn btn-success btn-lg">Upload Image</button>
