--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -51,7 +51,7 @@
                         <td class="col-1 align-self-center">
                             {{i+1}}
                         </td>
-                        <td class="col-3 align-self-center">
+                        <td class="col-md-3 col-lg-3 d-none d-lg-block d-md-block align-self-center">
                             <img class="img mw-100" src="{{formEvent.image}}" appDefault="assets/img/img-default.png">
                         </td>
                         <td class="col-2 align-self-center">
@@ -63,13 +63,13 @@
                         <td class="col-1 align-self-center">
                             {{event.endDate}}
                         </td>
-                        <td class="col-2 align-self-center text-center">
+                        <td class="col-3 col-md-2 col-lg-2 align-self-center text-center">
                             <a href="{{event.registerLink}}">{{event.registerLink}}</a>
                         </td>
-                        <td class="col-1 align-self-center">
+                        <td class="col-2 col-md-1 col-lg-1 align-self-center">
                             {{event.status}}
                         </td>
-                        <td class="col-1 text-center align-self-center">
+                        <td class="col-sm-2 col-md-1 col-lg-1 text-center align-self-center">
                             <button class="btn btn-info btn-sm" (click)="editEvent(event)">Edit</button>
                         </td>
                     </tr>
@@ -149,11 +149,14 @@
                         Image
                     </div>
                     <div class="col-4 d-flex justify-content-center">
-                        <img class="img mw-100 h-100" src="{{formEvent.image}}" appDefault="assets/img/img-default.png">
+                        <img class="img mw-100 h-100" [src]="imageSrc || defaultImage">
                     </div>
                     <div class="col-2 align-self-center">
-                        <button class="btn btn-success btn-lg">Upload Image</button>
-                        <button class="btn btn-danger btn-lg">Remove Image</button>
+                            <label for="event-img" class="btn btn-success btn-lg">
+                                Upload Image
+                            </label>
+                        <input type='file' accept="image/*" class="d-none" id="event-img" (change)="readURL($event);" />
+                        <button class="btn btn-danger btn-lg" (click)="removeImage();">Remove Image</button>
                     </div>
                 </div>
                 <div class="row">
