--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
         <div class="logo-img">
             <img src="assets/img/INTI-Logo.jpg"/>
         </div>
-        INTI Alumni
+        INTIcredibles
     </a>
 </div>
 <div class="sidebar-wrapper">
