Fix image preview not loading properly

--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -52,7 +52,7 @@
                             {{i+1}}
                         </td>
                         <td class="col-md-3 col-lg-3 d-none d-lg-block d-md-block align-self-center">
-                            <img class="img mw-100" src="{{formEvent.image}}" appDefault="assets/img/img-default.png">
+                            <img class="img mw-100" src="{{event.image}}" appDefault="assets/img/img-default.png">
                         </td>
                         <td class="col-2 align-self-center">
                             {{event.name}}
