--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -69,7 +69,7 @@
                             <a href="{{event.registerLink}}">{{event.registerLink}}</a>
                         </td>
                         <td class="col-1 align-self-center">
-                            {{event.status}}
+                            {{statusMapping[event.status]}}
                         </td>
                         <td class="col-2 text-center align-self-center justify-content-between">
                             <button class="btn btn-white btn-just-icon shadow-none text-danger" (click)="editEvent(event)"><i class="material-icons">edit</i></button>
