--- a/src/app/alumni/alumni.component.html
+++ b/src/app/alumni/alumni.component.html
@@ -68,7 +68,7 @@
                     </td>
                     <td class="col-2 text-center align-self-center justify-content-between">
                         <button class="btn btn-white btn-just-icon shadow-none text-danger" (click)="editAlumni(alumni)"><i class="material-icons">edit</i></button>
-                        <button class="btn btn-white btn-just-icon shadow-none text-danger" (click)="removeAlumni(alumni)"><i class="material-icons">delete</i></button>
+                        <button class="btn btn-white btn-just-icon shadow-none text-danger" (click)="removeAlumni(alumni.alumniId)"><i class="material-icons">delete</i></button>
                     </td>
                 </tr>
                 </tbody>
