--- a/src/app/alumni/alumni.component.html
+++ b/src/app/alumni/alumni.component.html
@@ -31,13 +31,13 @@
                     <th class="col-3">
                         Name
                     </th>
-                    <th class="col-2">
+                    <th class="col-3">
                         Email
                     </th>
                     <th class="col-1">
                         Contact No.
                     </th>
-                    <th class="col-3">
+                    <th class="col-2">
                         Graduating Campus
                     </th>
                     <th class="col-1">
@@ -54,7 +54,7 @@
                     <td class="col-3 align-self-center">
                         {{alumni.name}}
                     </td>
-                    <td class="col-2 align-self-center">
+                    <td class="col-3 align-self-center">
                         {{alumni.personalEmail}}
                     </td>
                     <td class="col-1 align-self-center">
@@ -66,9 +66,9 @@
                     <td class="col-1 align-self-center">
                         {{alumni.levelOfStudy | titlecase}}
                     </td>
-                    <td class="col-2 text-center align-self-center justify-content-between">
+                    <td class="col-1 text-center align-self-center justify-content-between">
                         <button class="btn btn-white btn-just-icon shadow-none text-danger" (click)="editAlumni(alumni)"><i class="material-icons">edit</i></button>
-                        <button class="btn btn-white btn-just-icon shadow-none text-danger" (click)="removeAlumni(alumni.alumniId)"><i class="material-icons">delete</i></button>
+<!--                        <button class="btn btn-white btn-just-icon shadow-none text-danger" (click)="removeAlumni(alumni.alumniId)"><i class="material-icons">delete</i></button>-->
                     </td>
                 </tr>
                 </tbody>
