--- a/src/app/alumni/alumni.component.html
+++ b/src/app/alumni/alumni.component.html
@@ -22,7 +22,7 @@
             </form>
         </div>
         <div class="card-body">
-            <table *ngIf="showTable" class="table">
+            <table *ngIf="showTable && displayAlumni.length > 0" class="table">
                 <thead class=" text-primary">
                 <tr class="d-flex">
                     <th class="col-1">
@@ -73,6 +73,7 @@
                 </tr>
                 </tbody>
             </table>
+            <div *ngIf="displayAlumni.length === 0" class="h1 text-center">No alumnis found!</div>
             <form *ngIf="showForm" [formGroup]="alumniForm" (ngSubmit)="submitForm()">
                 <div class="row">
                     <div class="col-2 text-primary align-self-center">
