--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -21,7 +21,7 @@
             </form>
         </div>
         <div class="card-body">
-            <table *ngIf="showTable" class="table">
+            <table *ngIf="showTable && displayFaqs.length > 0" class="table">
                 <thead class=" text-primary">
                 <tr class="d-flex">
                     <th class="col-1">
@@ -66,6 +66,7 @@
                 </tr>
                 </tbody>
             </table>
+            <div *ngIf="displayFaqs.length === 0" class="h1 text-center">No FAQs found!</div>
             <form *ngIf="showForm" [formGroup]="faqForm" (ngSubmit)="submitForm()">
                 <div class="row">
                     <div class="col-2 text-primary align-self-center">
@@ -95,7 +96,7 @@
                     </div>
                     <div class="col-4">
                         <mat-form-field class="example-full-width">
-                            <mat-select [(ngModel)]="formFaq.faqCatId" formControlName="faqCatId" required>
+                            <mat-select formControlName="faqCatId" required>
                                 <mat-option *ngFor="let faqCat of faqCats" value="{{faqCat.faqCatId}}">{{faqCat.name}}</mat-option>
                             </mat-select>
                         </mat-form-field>
