--- a/src/app/alumni/alumni.component.html
+++ b/src/app/alumni/alumni.component.html
@@ -73,7 +73,7 @@
                 </tr>
                 </tbody>
             </table>
-            <div *ngIf="displayAlumni.length === 0" class="h1 text-center">No alumnis found!</div>
+            <div *ngIf="showTable && displayAlumni.length === 0" class="h1 text-center">No alumnis found!</div>
             <form *ngIf="showForm" [formGroup]="alumniForm" (ngSubmit)="submitForm()">
                 <div class="row">
                     <div class="col-2 text-primary align-self-center">
