--- a/src/app/faq-categories/faq-categories.component.html
+++ b/src/app/faq-categories/faq-categories.component.html
@@ -54,7 +54,7 @@
                 </tr>
                 </tbody>
             </table>
-            <div *ngIf="displayFaqCats.length === 0" class="h1 text-center">No FAQ Categories found!</div>
+            <div *ngIf="showTable && displayFaqCats.length === 0" class="h1 text-center">No FAQ Categories found!</div>
             <form *ngIf="showForm" [formGroup]="faqCatForm" (ngSubmit)="submitForm()">
                 <div class="row">
                     <div class="col-2 text-primary align-self-center">
