--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -66,7 +66,7 @@
                 </tr>
                 </tbody>
             </table>
-            <div *ngIf="displayFaqs.length === 0" class="h1 text-center">No FAQs found!</div>
+            <div *ngIf="showTable && displayFaqs.length === 0" class="h1 text-center">No FAQs found!</div>
             <form *ngIf="showForm" [formGroup]="faqForm" (ngSubmit)="submitForm()">
                 <div class="row">
                     <div class="col-2 text-primary align-self-center">
